// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arguments.length > 3 1`] = `"Too much arguments passed to splitSmartly function!!!"`;

exports[`arguments.length 0 1`] = `"empty arguments"`;

exports[`demos [
  '(one / two) / "three / four" / <<five / six>>',
  '/',
  { brackets: '(), << >>' }
] 1`] = `
Array [
  "(one / two) / \\"three / four\\" / <<five / six>>",
  "/",
  Object {
    "brackets": "(), << >>",
  },
]
`;

exports[`demos [
  '(one / two) / "three / four" / <<five / six>>',
  '/',
  { brackets: [ [Array], [Array] ] }
] 1`] = `
Array [
  "(one / two) / \\"three / four\\" / <<five / six>>",
  "/",
  Object {
    "brackets": Array [
      Array [
        "(",
        ")",
      ],
      Array [
        "<<",
        ">>",
      ],
    ],
  },
]
`;

exports[`demos [
  '(one / two) / "three / four" / <<five / six>>',
  '/',
  { brackets: { '(': ')', '<<': '>>' } }
] 1`] = `
Array [
  "(one / two) / \\"three / four\\" / <<five / six>>",
  "/",
  Object {
    "brackets": Object {
      "(": ")",
      "<<": ">>",
    },
  },
]
`;

exports[`demos [
  'Peter loves Mary and Mary loves Johnny and Jonny loves Steve',
  'AND',
  { mentions: [ 'STEVE', 'PETER' ] }
] 1`] = `
Array [
  "Peter loves Mary and Mary loves Johnny and Jonny loves Steve",
  "AND",
  Object {
    "mentions": Array [
      "STEVE",
      "PETER",
    ],
  },
]
`;

exports[`demos [
  'SELECT best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'ONLY' }
] 1`] = `
Array [
  "SELECT best FROM life",
  Array [
    "SELECT ",
    "FROM ",
  ],
  Object {
    "includeSeparatorMode": "ONLY",
  },
]
`;

exports[`demos [
  'SELECT best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'RIGHT' }
] 1`] = `
Array [
  "SELECT best FROM life",
  Array [
    "SELECT ",
    "FROM ",
  ],
  Object {
    "includeSeparatorMode": "RIGHT",
  },
]
`;

exports[`demos [
  'SELECT best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'SEPARATELY' }
] 1`] = `
Array [
  "SELECT best FROM life",
  Array [
    "SELECT ",
    "FROM ",
  ],
  Object {
    "includeSeparatorMode": "SEPARATELY",
  },
]
`;

exports[`demos [
  'select best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'RIGHT' }
] 1`] = `
Array [
  "select best FROM life",
  Array [
    "SELECT ",
    "FROM ",
  ],
  Object {
    "includeSeparatorMode": "RIGHT",
  },
]
`;

exports[`demos [
  'select best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'RIGHT', ignoreCase: false }
] 1`] = `
Array [
  "select best FROM life",
  Array [
    "SELECT ",
    "FROM ",
  ],
  Object {
    "ignoreCase": false,
    "includeSeparatorMode": "RIGHT",
  },
]
`;

exports[`demos [
  {
    brackets: [],
    mentions: [],
    ignoreInsideQuotes: true,
    includeSeparatorMode: 'NONE',
    ignoreCase: true,
    trimResult: true,
    trimSeparators: false,
    defaultBrackets: [ [Array], [Array], [Array] ]
  }
] 1`] = `
Array [
  null,
  ",",
  Object {
    "brackets": Array [],
    "defaultBrackets": Array [
      Array [
        "(",
        ")",
      ],
      Array [
        "[",
        "]",
      ],
      Array [
        "{",
        "}",
      ],
    ],
    "ignoreCase": true,
    "ignoreInsideQuotes": true,
    "includeSeparatorMode": "NONE",
    "mentions": Array [],
    "trimResult": true,
    "trimSeparators": false,
  },
]
`;

exports[`demos [ 'One | Two | Three | Four', '|', { indexes: [ 1, 3 ] } ] 1`] = `
Array [
  "One | Two | Three | Four",
  "|",
  Object {
    "indexes": Array [
      1,
      3,
    ],
  },
]
`;

exports[`demos [ 'One | Two | Three | Four', '|', { indexes: 2 } ] 1`] = `
Array [
  "One | Two | Three | Four",
  "|",
  Object {
    "indexes": 2,
  },
]
`;

exports[`demos [ 'SELECT best FROM life', [ 'SELECT ', 'FROM ' ] ] 1`] = `
Array [
  "SELECT best FROM life",
  Array [
    "SELECT ",
    "FROM ",
  ],
  Object {},
]
`;

exports[`demos [ 'one , two , "three , four" , five , six' ] 1`] = `
Array [
  "one , two , \\"three , four\\" , five , six",
  ",",
  Object {},
]
`;

exports[`demos [ 'one _ two _ "three _ four" _ five _ six', '_' ] 1`] = `
Array [
  "one _ two _ \\"three _ four\\" _ five _ six",
  "_",
  Object {},
]
`;

exports[`demos [ 'one _ two _ "three _ four" _ five _ six', '_', { brackets: true } ] 1`] = `
Array [
  "one _ two _ \\"three _ four\\" _ five _ six",
  "_",
  Object {
    "brackets": true,
  },
]
`;

exports[`demos [ 'p1: point first p2: point second', /p\\d:/gi ] 1`] = `
Array [
  "p1: point first p2: point second",
  /p\\\\d:/gi,
  Object {},
]
`;

exports[`demos [ [ 'SELECT ', 'FROM ' ] ] 1`] = `
Array [
  null,
  Array [
    "SELECT ",
    "FROM ",
  ],
  Object {},
]
`;

exports[`demos [ { includeSeparatorMode: 'RIGHT', ignoreCase: false } ] 1`] = `
Array [
  null,
  ",",
  Object {
    "ignoreCase": false,
    "includeSeparatorMode": "RIGHT",
  },
]
`;

exports[`demos [ {} ] 1`] = `
Array [
  null,
  ",",
  Object {},
]
`;
